--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,12 @@ uvloop==0.21.0
 watchfiles==1.1.0
 websockets==15.0.1
 wheel==0.45.1
+fastapi
+uvicorn[standard]
+sqlalchemy
+pydantic
+pydantic-settings
+python-multipart
+google-auth
+google-auth-oauthlib
+google-api-python-client
